<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/layout_action_bar" />

    <portalbeanz.com.doublefoot.view.FloatLabel
        android:id="@+id/edt_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@color/transparent"
        android:hint="@string/old_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_size_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/light_gray" />

    <portalbeanz.com.doublefoot.view.FloatLabel
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@color/transparent"
        android:hint="@string/new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_size_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/light_gray" />

    <portalbeanz.com.doublefoot.view.FloatLabel
        android:id="@+id/edt_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@color/transparent"
        android:hint="@string/confirm_new_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_size_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/light_gray" />

</LinearLayout>