<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/action_bar_height">

    <TextView
        android:id="@+id/txt_notification"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="@dimen/text_size_normal"
        android:background="@color/light_gray"
        android:text="@string/title_lorem"
        android:layout_height="@dimen/notification_height" />

    <View
        android:id="@+id/container_action_bar"
        android:background="@color/color_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height" />

    <View
        android:id="@+id/layout_fake_actionbar"
        android:layout_width="match_parent"
        android:alpha="0"
        android:background="@color/color_action_bar"
        android:layout_height="@dimen/action_bar_height" />

    <ImageButton
        android:id="@+id/btn_left_action_bar"
        android:src="@drawable/ic_menu_left"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_btn_back"
        android:layout_width="48dp"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/btn_back"
        android:src="@drawable/btn_back_v2"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_btn_back"
        android:layout_width="48dp"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/btn_back_fake"
        android:src="@drawable/btn_back"
        android:visibility="invisible"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_btn_back"
        android:layout_width="48dp"
        android:layout_height="match_parent" />

    <portalbeanz.com.doublefoot.view.AutoResizeTextView
        android:id="@+id/txt_action_bar_title"
        android:textSize="@dimen/text_size_large"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:maxLines="2"
        android:ellipsize="end"
        android:gravity="center"
        android:layout_toLeftOf="@id/btn_back_fake"
        android:layout_toRightOf="@id/btn_left_action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/ic_logo"
        android:src="@drawable/ic_logo"
        android:gravity="center"
        android:padding="4dp"
        android:visibility="visible"
        android:layout_toLeftOf="@id/btn_back_fake"
        android:layout_toRightOf="@id/btn_left_action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <portalbeanz.com.doublefoot.view.OpenSanButton
        android:id="@+id/btn_right_action_bar"
        android:visibility="invisible"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:text="@string/done"
        android:layout_marginRight="@dimen/normal_margin"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white_clouds"
        android:background="@drawable/bg_done" />

</RelativeLayout>